# NIST_Benchmark

./: .gitignore  .gitmodules  Dockerfile  README.md  franka.sh
.catkin_tools/profiles/default/: devel_collisions.txt
devel/: .catkin  .rosinstall  local_setup.sh
devel/include/franka_example_controllers/: teleop_gripper_paramConfig.h  teleop_paramConfig.h
devel/include/relaxed_ik_ros1/: EEPoseGoals.h  EEVelGoals.h  IKPose.h  IKPoseRequest.h  IKPoseResponse.h  IKVelocity.h  IKVelocityRequest.h  IKVelocityResponse.h
devel/lib/franka_control/: franka_combined_control_node  franka_control_node
devel/lib/franka_example_controllers/: dual_arm_interactive_marker.py  interactive_marker.py  move_to_start.py  teleop_gripper_node
devel/lib/franka_gripper/: franka_gripper_node
devel/lib/franka_visualization/: gripper_joint_state_publisher  robot_joint_state_publisher
devel/lib/pkgconfig/: franka_control.pc  franka_description.pc  franka_example_controllers.pc  franka_gazebo.pc  franka_gripper.pc  franka_hw.pc  franka_msgs.pc  franka_visualization.pc  relaxed_ik_ros1.pc
devel/lib/python3/dist-packages/franka_example_controllers/cfg/: teleop_gripper_paramConfig.py  teleop_paramConfig.py
devel/lib/python3/dist-packages/relaxed_ik_ros1/msg/: _EEPoseGoals.py  _EEVelGoals.py  __init__.py
devel/lib/python3/dist-packages/relaxed_ik_ros1/srv/: _IKPose.py  _IKVelocity.py  __init__.py
devel/share/common-lisp/ros/relaxed_ik_ros1/msg/: EEPoseGoals.lisp  EEVelGoals.lisp  _package.lisp  _package_EEPoseGoals.lisp  _package_EEVelGoals.lisp  relaxed_ik_ros1-msg.asd
devel/share/franka_control/cmake/: franka_controlConfig.cmake
devel/share/franka_description/cmake/: franka_descriptionConfig.cmake
devel/share/franka_example_controllers/cmake/: franka_example_controllers-msg-paths.cmake  franka_example_controllersConfig.cmake
devel/share/franka_gazebo/cmake/: franka_gazeboConfig.cmake
devel/share/franka_gripper/cmake/: franka_gripper-msg-paths.cmake  franka_gripperConfig.cmake
devel/share/franka_hw/cmake/: franka_hwConfig.cmake
devel/share/franka_msgs/cmake/: franka_msgs-msg-paths.cmake  franka_msgsConfig.cmake
devel/share/franka_visualization/cmake/: franka_visualizationConfig.cmake
devel/share/relaxed_ik_ros1/cmake/: relaxed_ik_ros1-msg-paths.cmake  relaxed_ik_ros1Config.cmake
devel/share/roseus/ros/franka_example_controllers/: manifest.l
devel/share/roseus/ros/franka_gripper/: manifest.l
devel/share/roseus/ros/franka_msgs/: manifest.l
devel/share/roseus/ros/relaxed_ik_ros1/: manifest.l
doc/: docker_script.md  live.md  mya_notes.md  physical_bot.md  physical_bot_controller.md  ros_packages.md  run_robot.md  run_simulation.md  setup.md  simulation.md  simulation_controller.md
libfranka/test/: CMakeLists.txt  model_tests.cpp
logs/franka_test/: build.check.002.log.stderr  build.check.004.log.stderr  build.cmake.000.log.stderr  build.make.000.log.stderr  build.make.005.log.stderr  build.make.006.log.stderr
logs/panda_benchmark/: build.check.014.log.stderr  build.check.015.log.stderr  build.check.016.log.stderr  build.check.018.log.stderr  build.make.015.log.stderr
logs/python_orocos_kdl/: build.make.004.log.stderr
output/: accuracy_test.csv  accuracy_test_0.csv
panda_robot/src/panda_robot/: panda_robot.py
ros-docker-dev/: README.md  enterpoint.sh  env.sh  panda-bake.hcl  panda-noetic.Dockerfile  raw.Dockerfile  test.sh
ros-docker-dev/configs/: oh-my-zsh.zshrc
src/: .rosinstall  .rosinstall.bak
src/Azure-Kinect-Sensor-SDK/: microsoft-support.md
src/Azure-Kinect-Sensor-SDK/docs/: usage.md
src/franka_human_friendly_controllers/: setup_gazebo.py
src/franka_human_friendly_controllers/src/: joint_variable_impedance_controller.cpp
src/franka_ros/franka_description/robots/: hand.xacro
src/franka_ros/franka_gazebo/: CMakeLists.txt  package.xml
src/franka_ros/franka_gazebo/config/: sim_controllers.yaml
src/franka_ros/franka_gazebo/launch/: panda.launch
src/franka_test/: CMakeLists.txt  franka_example_controllers_plugin.xml  franka_test_plugin.xml  package.xml
src/franka_test/cfg/: compliance_param.cfg  desired_mass_param.cfg  teleop_gripper_param.cfg  teleop_param.cfg
src/franka_test/config/: franka_example_controllers.yaml  franka_test.yaml
src/franka_test/include/franka_test/: joint_position_controller.h  joint_position_example_controller.h  model_example_controller.h
src/franka_test/launch/: joint_position_controller.launch  joint_position_example_controller.launch  model_example_controller.launch
src/franka_test/scripts/: line_tracing.py  move_to_position.py  transformations.py
src/franka_test/src/: joint_position_controller.cpp  joint_position_example_controller.cpp  model_example_controller.cpp  publish_cartesian_position.cpp
src/panda_benchmark/: CMakeLists.txt  package.xml  panda_benchmark_plugin.xml
src/panda_benchmark/cfg/: compliance_param.cfg  desired_mass_param.cfg  teleop_gripper_param.cfg  teleop_param.cfg
src/panda_benchmark/config/: panda_benchmark.yaml
src/panda_benchmark/include/panda_benchmark/: joint_position_controller.h  model_example_controller.h
src/panda_benchmark/launch/: interface.launch  interface_b.launch  joint_position_controller.launch  model_example_controller.launch  simulation copy.launch  simulation.launch  simulation_b.launch
src/panda_benchmark/scripts/: ik.py  move_to_position.py  move_to_small_position.py  pick_and_place.py  point_generation.py  test.py  test_accuracy.py  torque_controller.py  torque_controller_with_ik.py  torque_trajectory_tracker.py  trajectory_follower.py
src/panda_benchmark/src/: joint_position_controller.cpp  model_example_controller.cpp  temp.cpp
src/panda_robot.egg-info/: PKG-INFO  requires.txt  top_level.txt
src/panda_simulator/docker/: ros_entrypoint.sh
src/panda_simulator/panda_gazebo/worlds/: panda.world
src/relaxed_ik_ros1/launch/: ik.launch
src/relaxed_ik_ros1/msg/: EEPoseGoals.msg
src/relaxed_ik_ros1/relaxed_ik_core/configs/urdfs/: panda.urdf
src/relaxed_ik_ros1/relaxed_ik_core/src/spacetime/: arm.rs
(+27 files in other folders)
